--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ AddType text/x-component .htc
 
 RewriteEngine On
 # localhost
- RewriteBase /dadobhaktapur/
+ RewriteBase /radodipayal/
 # live
 # RewriteBase /
 
